feat: add /api/login post endpoint to authenticate users
