# docs/swagger.json
@@ -145,19 +145,19 @@
                 "operationId": "get-chirp-by-id",
                 "responses": {
                     "200": {
-                        "description": "created chirp's information",
+                        "description": "Created chirp's information",
                         "schema": {
                             "$ref": "#/definitions/models.Chirp"
                         }
                     },
-                    "404": {
-                        "description": "Chirp not found in database",
+                    "400": {
+                        "description": "Invalid chirp id provided",
                         "schema": {
                             "$ref": "#/definitions/helpers.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal server error: can not deal with data properly",
+                    "404": {
+                        "description": "Chirp not found in database",
                         "schema": {
                             "$ref": "#/definitions/helpers.ErrorResponse"
                         }
@@ -183,6 +183,53 @@
                         "description": "OK",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/login": {
+            "post": {
+                "description": "Check if the users are who they claimed",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Login users",
+                "operationId": "post-user-login",
+                "parameters": [
+                    {
+                        "description": "user email and passowrd",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.userParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "user's information",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "401": {
+                        "description": "Incorrect email or password",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error: can not deal with data properly",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
                         }
                     }
                 }
@@ -221,7 +268,7 @@
                         }
                     },
                     "500": {
-                        "description": "Failed to create user in DB",
+                        "description": "Internal server error occured",
                         "schema": {
                             "$ref": "#/definitions/helpers.ErrorResponse"
                         }
@@ -309,6 +356,9 @@
             "type": "object",
             "properties": {
                 "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
