# internal/api/handlers/params_struct.go
@@ -1,0 +1,13 @@
+package handlers
+
+import "github.com/google/uuid"
+
+type userParams struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type chirpParams struct {
+	Body   string    `json:"body"`
+	UserID uuid.UUID `json:"user_id"`
+}
